--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 </head>
 
 <body>
-  <!-- Content -->
-  <script src="/assets/js/xy-polyfill.js" nomodule></script>
-  <script src="/assets/js/script.js" type="module"></script>
+
+<a href="https://codepen.io/raphaelmartin/pen/VwVWdmM">Mini chat</a>
+
 </body>
 </html>
