--- a/index.html
+++ b/index.html
@@ -29,7 +29,23 @@
 <body>
 
 <p>
-<a href="https://codepen.io/raphaelmartin/pen/VwVWdmM">Mini chat</a>
+  <a href="https://codepen.io/raphaelmartin/pen/VwVWdmM">Mini chat</a>
+</p>
+
+<p>
+  <a href="#">Speech bubble</a>
+</p>
+
+<p>
+  <a href="#">Ticket de presse</a>
+</p>
+
+<p>
+  <a href="#">Movie App</a>
+</p>
+
+<p>
+  <a href="#">Img carousel css-only</a>
 </p>
 
 </body>
