--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </p>
 
 <p>
-  <a href="#">Speech bubble</a>
+  <a href="/speech-bubble/">Speech bubble</a>
 </p>
 
 <p>
@@ -41,11 +41,7 @@
 </p>
 
 <p>
-  <a href="#">Movie App</a>
-</p>
-
-<p>
-  <a href="#">Img carousel css-only</a>
+  <a href="/films-app/">Movie App</a>
 </p>
 
 </body>
